--- a/Day01/ss2/Index.html
+++ b/Day01/ss2/Index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Hello world</h1>
-    <p>Ip14</p>
+    <p>Ip14 pro</p>
     <Strong>29.990.000</Strong>
-    <img src = "https://cdn.tgdd.vn/Products/Images/42/247508/iphone-14-pro-vang-thumb-600x600.jpg">
+    <img with=100  src = "https://cdn.tgdd.vn/Products/Images/42/247508/iphone-14-pro-vang-thumb-600x600.jpg">
 </body>
 </html>
