--- a/Day02/ss4/exersice03-part01.html
+++ b/Day02/ss4/exersice03-part01.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div>
-        <h1>VIET NAM - VIỆT NAM</h1>
+        <h1 style = "border-bottom:solid yellow">VIET NAM - VIỆT NAM</h1>
         <center><img width="100%" src="https://github.com/nhannn87dn/Html-Css-Js-Tutorials/blob/main/03.RoadMap-40h/Day-02-HTML5-T2/4-Homeworks/Exercise-3/img/hinh-1.png?raw=true"></center>
         <p style="text-align: center; color:dimgray;"><sub><img src="img/symbol c.png" style="width: 20px;height: 20px;"></sub> Minh Ngo Thanh, Winner, Vietnam National Award,2016 sony World Photography Awards</p>
         <h2>Bạn có phải là nhiếp ảnh gia hàng đầu Việt Nam?</h2>
