upload homework Day06

--- a/Day06/index.html
+++ b/Day06/index.html
@@ -22,7 +22,7 @@
 
     <!-- Task 6 -->
     <!-- <p id= "add_product"></p>
-    <button name= 'addproduct' onclick="document.getElementById('add_product').innerHTML= 'Bạn đã thêm vào giỏ hàng thành công !'">Thêm vào giỏ hàng</button> -->
+    <button name= 'addproduct' onclick="document.getElementById('add_product').innerHTML= 'Bạn đã thêm vào giỏ hàng thành công !', alert('Bạn đã thêm vào giỏ hàng thành công !')">Thêm vào giỏ hàng</button> -->
     
     <!-- Task 7 -->
     <input id="add_text" type="text" onkeypress="onKeyPress()" onkeyup="onKeyUp()" onkeydown="onKeyDown()" name= "event" placeholder="Nhập vào chuỗi ký tự">
