--- a/Day09/index-workshop.html
+++ b/Day09/index-workshop.html
@@ -35,7 +35,7 @@
                     <div class="article_list">
                         <article class="article_item flex">
                             <div class="photo"><img src="https://via.placeholder.com/200" alt="photo"></div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta aliquam dignissimos, ipsam ea repellendus suscipit impedit explicabo ullam nesciunt sint iusto assumenda nisi velit excepturi eos veritatis quas ad neque!</p>
+                            <div class = "content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta aliquam dignissimos, ipsam ea repellendus suscipit impedit explicabo ullam nesciunt sint iusto assumenda nisi velit excepturi eos veritatis quas ad neque!</div>
                         </article>
                     </div>
                     <div class="product_list flex justify-between flex-wrap">
