--- a/Day12/index.html
+++ b/Day12/index.html
@@ -29,7 +29,7 @@
 <body>
   <header>
     <div class="card text-bg-dark overflow-hidden">
-      <img src="https://demos.creative-tim.com/awesome-landing-page/assets/img/template/bg3.jpg" class="card-img"
+      <img src="https://demos.creative-tim.com/awesome-landing-page/assets/img/template/bg3.jpg" class="card-img opacity-25"
         alt="photo-nature">
       <div class="card-img-overlay container">
         <!-- Build nav -->
@@ -53,9 +53,9 @@
           </div>
           <!-- nav mobile -->
           <div class="btn-group justify-content-end d-block d-md-none d-lg-none d-flex flex-row justify-content-end">
-            <button class="btn btn-secondary btn-sm dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="toggle_mobile btn btn-secondary btn-sm dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
               MENU
-              <ul class="dropdown-menu dropdown-menu-dark position-absolute">
+              <ul class="dropdown-menu dropdown-menu-dark">
                 <li><a class="dropdown-item" href="#"><i class="fa-brands fa-facebook"></i>Like</a></li>
                 <li><a class="dropdown-item" href="#"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
                 <li><a class="dropdown-item" href="#"><i class="fa-brands fa-pinterest"></i>Pin</a></li>
@@ -244,7 +244,7 @@
     </section>
     <section class="section section_no_padding">
       <div class="card text-bg-dark position-relative">
-        <img src="https://demos.creative-tim.com/awesome-landing-page/assets/img/template/bg3.jpg" class="card-img"
+        <img src="https://demos.creative-tim.com/awesome-landing-page/assets/img/template/bg3.jpg" class="card-img opacity-25"
           alt="...">
         <div class="container">
           <div class="info card-img-overlay position-absolute top-50">
