--- a/Day12/index.html
+++ b/Day12/index.html
@@ -55,7 +55,7 @@
           <div class="btn-group justify-content-end d-block d-md-none d-lg-none d-flex flex-row justify-content-end">
             <button class="toggle_mobile btn btn-secondary btn-sm dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
               MENU
-              <ul class="dropdown-menu dropdown-menu-dark">
+              <ul class="dropdown-menu dropdown-menu-dark opacity-50">
                 <li><a class="dropdown-item" href="#"><i class="fa-brands fa-facebook"></i>Like</a></li>
                 <li><a class="dropdown-item" href="#"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
                 <li><a class="dropdown-item" href="#"><i class="fa-brands fa-pinterest"></i>Pin</a></li>
