--- a/Day12/index.html
+++ b/Day12/index.html
@@ -53,8 +53,8 @@
           </div>
           <!-- nav mobile -->
           <div class="btn-group justify-content-end d-block d-md-none d-lg-none d-flex flex-row justify-content-end">
-            <button class="toggle_mobile btn btn-secondary btn-sm dropdown-toggle opacity-75" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              MENU
+            <button class="btn btn-sm dropdown-toggle opacity-75" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-sliders fa-2xl" style="color: #eff0f0;"></i>
               <ul class="dropdown-menu dropdown-menu-dark opacity-50">
                 <li><a class="dropdown-item" href="#"><i class="fa-brands fa-facebook"></i>Like</a></li>
                 <li><a class="dropdown-item" href="#"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
